# chatbot-rag

./: README.md  alembic.ini  main.py  pyproject.toml  settings.py
alembic/: env.py
alembic/versions/: 9158e3bde392_first_migration.py
database/: session.py  table_registration.py  tables.py
docker/: dockerfile
llm/: interfaces.py
models/: enums.py
scripts/: db_create.py
