[tool.poetry]
package-mode = false

[project]
name = "chatbot-rag"
description = ""
authors = [
    {name = "Brian Roy Sagredo Lijeron",email = "brianroy78@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "ollama (>=0.4.7,<0.5.0)",
    "mypy (>=1.15.0,<2.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

